feat: create pages to front

--- a/front/Pages/Index.cshtml
+++ b/front/Pages/Index.cshtml
@@ -1,8 +1,33 @@
 @page
 @model GerenRest.RazorPages.Pages.Index
-
-<h1>Sistema de restarantes</h1>
-
-<div>
-    
+<div style="margin:30px">
+    <h1>Bem-vindo à nossa escola de inglês!</h1>
+    <p class="text-justify">Na nossa escola, estamos comprometidos em ajudar você a desenvolver habilidades excepcionais no idioma inglês.
+        Aqui,
+        oferecemos um ambiente acolhedor e estimulante, onde você pode mergulhar no aprendizado da língua inglesa de
+        forma
+        envolvente e eficaz.</p>
+    <p class="text-justify">Nossos instrutores altamente qualificados são falantes nativos de inglês e possuem uma paixão contagiante pelo
+        ensino. Eles estão prontos para guiá-lo em sua jornada de aprendizado, adaptando as aulas de acordo com suas
+        necessidades e objetivos individuais. Seja você um iniciante que deseja estabelecer uma base sólida no idioma ou
+        um
+        estudante avançado em busca de aprimoramento, nossa equipe de professores está aqui para apoiá-lo em cada passo
+        do
+        caminho.</p>
+    <p class="text-justify">Além disso, nossa abordagem de ensino é dinâmica e interativa. Acreditamos que a imersão total no idioma é
+        essencial
+        para uma aprendizagem efetiva, portanto, oferecemos uma variedade de atividades práticas, como simulações de
+        situações reais, debates estimulantes e exercícios interativos em grupo. Você terá a oportunidade de praticar
+        suas
+        habilidades de audição, fala, leitura e escrita de forma integrada, fortalecendo sua confiança e fluência no
+        idioma.
+    </p>
+    <p class="text-justify">Nossa escola também valoriza a cultura e a diversidade. Oferecemos eventos e workshops culturais para enriquecer
+        ainda mais sua experiência de aprendizado, permitindo que você mergulhe na riqueza da língua inglesa e
+        compreenda
+        sua relevância global.</p>
+    <p class="text-justify">Estamos animados para fazer parte da sua jornada de aprendizado de inglês e ajudá-lo a alcançar seus objetivos
+        linguísticos. Junte-se a nós e descubra um mundo de oportunidades que se abrem quando você domina o inglês.
+        Entre em
+        contato conosco hoje mesmo e comece a trilhar seu caminho para o sucesso no idioma inglês!</p>
 </div>
