--- a/front/Pages/Shared/_MainMenuPartialPage.cshtml
+++ b/front/Pages/Shared/_MainMenuPartialPage.cshtml
@@ -2,11 +2,11 @@
     <tr>
         <td>
             <div class="btn-group d-flex justify-content-start" role="group" aria-label="Exemplo de alguma coisa">
-                <a class="btn btn-danger" href="/">Home</a>
-                <a class="btn btn-danger" asp-page="/Category/Index">Categorias</a>
-                <a class="btn btn-danger" asp-page="/Products/Index">Produtos</a>
-                <a class="btn btn-danger" asp-page="/Table/Index">Mesas</a>
-                <a class="btn btn-danger" asp-page="/Waiter/Index">Garçons</a>
+                <a class="btn btn-primary" href="/">home</a>
+                <a class="btn btn-primary" asp-page="/Material/Index">materiais</a>
+                <a class="btn btn-primary" asp-page="/Quizz/Index">quizz</a>
+                <a class="btn btn-primary" asp-page="/Login/Index">login</a>
+                <a class="btn btn-primary" asp-page="/Register/Index">registro</a>
             </div>
         </td>
     </tr>
