feat: create pages

--- a/front/Pages/Index.cshtml
+++ b/front/Pages/Index.cshtml
@@ -1,6 +1,6 @@
 @page
 @model GerenRest.RazorPages.Pages.Index
-<div style="margin:30px">
+<div>
     <h1>Bem-vindo à nossa escola de inglês!</h1>
     <p class="text-justify">Na nossa escola, estamos comprometidos em ajudar você a desenvolver habilidades excepcionais no idioma inglês.
         Aqui,
