--- a/front/Pages/Shared/_MainLayout.cshtml
+++ b/front/Pages/Shared/_MainLayout.cshtml
@@ -19,7 +19,7 @@
     <header>
         <partial name="./_MainMenuPartialPage.cshtml">
     </header>
-    <main class="mx-auto">
+    <main>
         @RenderBody()
     </main>
 </body>
