--- a/front/Pages/Login/Index.cshtml
+++ b/front/Pages/Login/Index.cshtml
@@ -4,8 +4,22 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<div>
-    
+<div class="container">
+    <div class="row justify-content-center">
+        <h1 style="text-align:center;margin-top:20vh">@ViewData["Title"]</h1>
+        <div class="col-md-6">
+            <form method="post">
+                <div class="form-group">
+                    <label for="username">Nome de Usuário</label>
+                    <input type="text" class="form-control" id="username" placeholder="Digite seu nome de usuário">
+                </div>
+                <div class="form-group">
+                    <label for="password">Senha</label>
+                    <input type="password" class="form-control" id="password" placeholder="Digite sua senha">
+                </div>
+                <button type="submit" class="btn btn-primary">Entrar</button>
+            </form>
+        </div>
+    </div>
 </div>
