--- a/front/Pages/Material/Index.cshtml
+++ b/front/Pages/Material/Index.cshtml
@@ -7,5 +7,43 @@
 <h1>@ViewData["Title"]</h1>
 
 <div>
-    
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Material 1</h5>
+                    <p class="card-text">Descrição do Material 1.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Material 2</h5>
+                    <p class="card-text">Descrição do Material 2.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Material 3</h5>
+                    <p class="card-text">Descrição do Material 3.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Material 4</h5>
+                    <p class="card-text">Descrição do Material 4.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
