--- a/front/Pages/Quizz/Index.cshtml
+++ b/front/Pages/Quizz/Index.cshtml
@@ -5,25 +5,14 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-
-<div style="margin: auto;">
-    <div class="row" style="margin-top:auto">
-            <div class="col">
-                <h2>Questão 1:</h2>
-                <p>Qual é a capital do Brasil?</p>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'a')">São Paulo</button>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'b')">Rio de Janeiro</button>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'c')">Brasília</button>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'd')">Salvador</button>
+<div>
+    <a asp-page="Quiz" asp-route-id="1">
+        <div class="card" style="width:18rem">
+            <div class="card-body">
+                <h5 class="card-title ">
+                    ToBe
+                </h5>
             </div>
         </div>
+    </a>
 </div>
-
-<script>
-    function checkAnswer(selectedOption) {
-        // Lógica para verificar a resposta selecionada pelo usuário
-        // Você pode implementar a lógica de verificação aqui
-        console.log("Question: " + question);
-        console.log("Selected Option: " + selectedOption);
-    }
-</script>
