--- a/front/Pages/Register/Index.cshtml
+++ b/front/Pages/Register/Index.cshtml
@@ -4,8 +4,30 @@
     ViewData["Title"] = "Registro";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="container">
+    <h1 style="text-align:center;margin-top: 20vh">@ViewData["Title"]</h1>
 
-<div>
-    
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form method="POST">
+                <div class="form-group">
+                    <label for="firstName">Nome</label>
+                    <input type="text" class="form-control" id="firstName" placeholder="Digite seu primeiro nome">
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Sobrenome</label>
+                    <input type="text" class="form-control" id="lastName" placeholder="Digite seu sobrenome">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Digite seu email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Senha</label>
+                    <input type="password" class="form-control" id="password" placeholder="Digite sua senha">
+                </div>
+                <button type="submit" class="btn btn-primary">Registrar</button>
+            </form>
+        </div>
+    </div>
 </div>
