--- a/front/Pages/Quizz/Quiz.cshtml
+++ b/front/Pages/Quizz/Quiz.cshtml
@@ -1,5 +1,5 @@
 @page "{id:int}"
-@model front.Pages.Quizz.Index
+@model front.Pages.Quizz.Quiz
 @{
     ViewData["Title"] = "Quizz";
 }
@@ -8,15 +8,14 @@
 
 <div style="margin: auto;">
     <div class="row" style="margin-top:auto">
-            <div class="col">
-                <h2>Questão 1:</h2>
-                <p>Qual é a capital do Brasil?</p>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'a')">São Paulo</button>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'b')">Rio de Janeiro</button>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'c')">Brasília</button>
-                <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'd')">Salvador</button>
-            </div>
+        <div class="col">
+            <h2>Questão</h2>
+            <p>@Model.quiz.Questions</p>
+            <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'a')">@Model.quiz.FirstOption</button>
+            <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'b')">@Model.quiz.SecondOption</button>
+            <button class="btn btn-primary btn-block" onclick="checkAnswer(1, 'c')">@Model.quiz.ThirdOption</button>
         </div>
+    </div>
 </div>
 
 <script>
