fix: layalt and remove login

--- a/front/Pages/Quizz/Index.cshtml
+++ b/front/Pages/Quizz/Index.cshtml
@@ -9,7 +9,7 @@
     @foreach (var quizz in Model.quiz)
     {
 
-        <a asp-page="Quiz" asp-route-id="@quizz.QuizzId">
+        <a asp-page="Quiz" asp-route-id="@quizz.QuizzId" style="text-decoration: none;">
             <div class="card" style="width:18rem">
                 <div class="card-body">
                     <h5 class="card-title ">
