--- a/front/Pages/Material/Index.cshtml
+++ b/front/Pages/Material/Index.cshtml
@@ -1,49 +1,23 @@
 @page
 @model front.Pages.Material.Index
 @{
-    ViewData["Title"] = "Material";
+    ViewData["Title"] = "Materiais";
 }
 
 <h1>@ViewData["Title"]</h1>
 
 <div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card">
+    @foreach (var material in Model.materials)
+    {
+        <div class="card" style="width:18rem">
+            <a href="@material.Link" style="text-decoration: none;width:18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Material 1</h5>
-                    <p class="card-text">Descrição do Material 1.</p>
+                    <img src="@material.Image" alt="@material.Title" class="card-img-top">
+                    <h5 class="card-title ">
+                        @material.Title
+                    </h5>
                 </div>
-            </div>
+            </a>
         </div>
-
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Material 2</h5>
-                    <p class="card-text">Descrição do Material 2.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Material 3</h5>
-                    <p class="card-text">Descrição do Material 3.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Material 4</h5>
-                    <p class="card-text">Descrição do Material 4.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    }
 </div>
