--- a/front/Pages/Shared/_MainLayout.cshtml
+++ b/front/Pages/Shared/_MainLayout.cshtml
@@ -7,7 +7,7 @@
             background-color: #ece6ff;
         }
     </style>
-    <title>Restaurantes Ltda</title>
+    <title>Escola de idiomas</title>
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
