--- a/front/Pages/Login/Index.cshtml
+++ b/front/Pages/Login/Index.cshtml
@@ -12,14 +12,19 @@
             <form method="post">
                 <div class="form-group">
                     <label for="username">Nome de Usuário</label>
-                    <input type="text" class="form-control" id="username" placeholder="Digite seu nome de usuário">
+                    <input type="text" name="email" class="form-control" id="username" placeholder="Digite seu nome de usuário">
                 </div>
                 <div class="form-group">
                     <label for="password">Senha</label>
-                    <input type="password" class="form-control" id="password" placeholder="Digite sua senha">
+                    <input type="password" name="password" class="form-control" id="password" placeholder="Digite sua senha">
                 </div>
-                <button type="submit" class="btn btn-primary">Entrar</button>
+                <button type="submit" class="btn btn-primary" style="width: 100%; margin-top:10px">Entrar</button>
+                <a href="/register"><button type="button" class="btn btn-primary" style="width: 100%; margin-top:10px">Registrar</button></a>
+
             </form>
         </div>
     </div>
 </div>
+<script>
+    document.getElementsByTagName("header")[0].innerHTML = "";
+</script>
