--- a/front/Pages/Register/Index.cshtml
+++ b/front/Pages/Register/Index.cshtml
@@ -26,8 +26,11 @@
                     <label for="password">Senha</label>
                     <input type="password" class="form-control" id="password" placeholder="Digite sua senha">
                 </div>
-                <button type="submit" class="btn btn-primary">Registrar</button>
+                <button type="submit" class="btn btn-primary" style="width: 100%; margin-top:20px">Registrar</button>
             </form>
         </div>
     </div>
 </div>
+<script>
+    document.getElementsByTagName("header")[0].innerHTML = "";
+</script>
