--- a/front/Pages/Register/Index.cshtml
+++ b/front/Pages/Register/Index.cshtml
@@ -12,22 +12,26 @@
             <form method="POST">
                 <div class="form-group">
                     <label for="firstName">Nome</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="Digite seu primeiro nome">
+                    <input type="text" class="form-control" id="firstName" name="firstName"
+                        placeholder="Digite seu primeiro nome">
                 </div>
                 <div class="form-group">
                     <label for="lastName">Sobrenome</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="Digite seu sobrenome">
+                    <input type="text" class="form-control" id="lastName" name="lastName"
+                        placeholder="Digite seu sobrenome">
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Digite seu email">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu email">
                 </div>
                 <div class="form-group">
                     <label for="password">Senha</label>
-                    <input type="password" class="form-control" id="password" placeholder="Digite sua senha">
+                    <input type="password" class="form-control" id="password" name="password"
+                        placeholder="Digite sua senha">
                 </div>
                 <button type="submit" class="btn btn-primary" style="width: 100%; margin-top:20px">Registrar</button>
             </form>
+
         </div>
     </div>
 </div>
